--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    fewf
+    <div class="container" style="display: flex; vertical-align: middle; align-items: center;">
+        <h2 style="color: red;">Jai Mata Di</h2>
+    </div>
 </body>
 </html>
